# gcc_container

./: .clang-tidy  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.txt  docker-compose.yaml  main.cpp
.devcontainer/: Dockerfile  conan_profile.conf  devcontainer.json  docker-compose.yml  docker-compose_develop.yaml  docker-compose_develop.yml
.devcontainer/scripts/: run.sh
project/: CMakeLists.txt  Dockerfile
